# seqlibAdPa

./: README.md  aaa.md  pyproject.toml
src/seqlibAdPa/: DNASeq.py  __init__.py
