[build-system]
requires = ['setuptools>=79.0', 'wheel>=0.45']
build-backend = 'setuptools.build_meta'

[project]
name = 'seqlibAdPa'
version = '0.1.0'
authors = [
  { name = 'Patrycja Adamowicz', email = 'patrycja.adamowicz@student.uj.edu.pl' }
]
maintainers = [
  { name = 'Patrycja Adamowicz', email = 'patrycja.adamowicz@student.uj.edu.pl' }
]
description = 'The `seqlibAdPa` library provides a class DNASeq with methods for handling DNA nucleotide sequences in python.'
readme = 'README.md'
license = 'GPL-3.0-or-later'
license-files = [ 'LICENSE*' ]
keywords = [
    'biological sequences', 'nucleotide sequences',
    'sequence manipulation', 'bioinformatics'
]
classifiers = [
    'Development Status :: 4 - Beta',
    'Intended Audience :: Science/Research',
    'Intended Audience :: Developers',
    'Operating System :: OS Independent',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3 :: Only',
    'Topic :: Scientific/Engineering :: Bio-Informatics',
    'Topic :: Scientific/Engineering :: Information Analysis',
    'Topic :: Software Development :: Libraries :: Python Modules'
]
requires-python = '>=3.13.3'
dependencies = [
    'numpy>=2.2.5',
]

[project.optional-dependencies]
dev = [
    'pytest>=8.3',
    'ruff>=0.11',
    'build>=0.10',
    'twine>=6.1'
]

[project.urls]
Homepage = 'https://github.com/githubusername/seqlibAdPa'
Repository = 'https://github.com/githubusername/seqlibAdPa'
'Bug Tracker' = 'https://github.com/mb/githubusername/seqlibAdPa/issues'

